--- a/WhyRemitApp/WhyRemitApp/Views/Currencies/CurrencyPage.xaml
+++ b/WhyRemitApp/WhyRemitApp/Views/Currencies/CurrencyPage.xaml
@@ -41,14 +41,14 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="10,20,10,0">
-                        <ListView ItemsSource="{Binding CurrencyModelList}" HasUnevenRows="True" SeparatorVisibility="None">
+                        <ListView ItemsSource="{Binding CurrencyModelList}" HasUnevenRows="True" SeparatorVisibility="None" ItemSelected="ListView_ItemSelected">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
                                         <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0,10,0,10">
-                                            <Grid.GestureRecognizers>
+                                            <!--<Grid.GestureRecognizers>
                                                 <TapGestureRecognizer Tapped="Currency_Tapped"/>
-                                            </Grid.GestureRecognizers>
+                                            </Grid.GestureRecognizers>-->
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto"/>
                                             </Grid.RowDefinitions>
@@ -71,7 +71,7 @@
                                                         <Label Grid.Row="1" Grid.Column="0" Text="{Binding CurrencyExpire}" HorizontalOptions="FillAndExpand" VerticalOptions="Center" 
                                                            TextColor="{Binding CurrencyExpireColor}" FontSize="10"/>
 
-                                                        <Label Grid.Row="0" Grid.Column="1" Text="Best Rates" HorizontalOptions="Center" VerticalOptions="Center" 
+                                                        <Label Grid.Row="0" Grid.Column="1" Text="Best Rate" HorizontalOptions="Center" VerticalOptions="Center" 
                                                            TextColor="{StaticResource AppGrayColor}" FontSize="14" />
                                                         <Label Grid.Row="1" Grid.Column="1" Text="{Binding BestRateValue}" HorizontalOptions="Center" VerticalOptions="Center" 
                                                            TextColor="{StaticResource AppLightBlackColor}" FontSize="14"/>
